--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "blueimp-md5": "^2.18.0",
     "egg": "^2.15.1",
-    "egg-scripts": "^2.11.0"
+    "egg-scripts": "^2.11.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "autod": "^3.0.1",
